# 9piece-solver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  solve.cpp  util.hpp
data/: demopuzzle.txt  puzzle-0000.txt  puzzle-0001.txt  yuu-asaka.txt
helper/: index.html  solver.js
src/: main.cpp  puzzle.cpp  puzzle.hpp  solver.cpp  solver.hpp  util.cpp  util.hpp
